<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Proyecto</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">A Main Activity</string>
    <string name="button_use_camera">Use Camera</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="button_capture_text">SNAP</string>
    <string name="content_desc_overlay">overlay</string>
    <string name="content_desc_image_just_taken">Image just taken</string>
    <string name="title_activity_seleccion">SeleccionActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="continuar">Continuar</string>
    <string name="seleccione_sus_alimentos">Seleccione sus alimentos</string>
    <string name="frutas">Frutas:</string>
    <string name="granos">Granos:</string>
    <string name="vegetales">Vegetales:</string>
    <string name="proteinas">Proteinas:</string>

</resources>